--- a/pyscript_readlocalfile.html
+++ b/pyscript_readlocalfile.html
@@ -1,6 +1,6 @@
 <!-- copied from https://blog.logrocket.com/pyscript-run-python-browser/#fetching-rendering-data-api -->
 
-
+<!-- more tests -->
 
 <!DOCTYPE html>
 <html lang="en">
